# pdf-duplex-prep

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pdf_duplex_prep/: __init__.py  __main__.py
tests/: test_main.py
